# pymdm

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.cursor/rules/: darwin-scripting.mdc  pymdm-architecture.mdc  python-general-best-practices.mdc  sphinx-docstrings.mdc  testing-conventions.mdc  windows-scripting.mdc
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  run-tests.yml
docs/: conf.py  contributing.md  index.md
docs/_static/css/: custom.css
docs/_templates/partials/: foot-socials.html  nav-socials.html
docs/api-reference/: command-runner.md  dialog.md  index.md  logger.md  mdm.md  param-parser.md  platforms-darwin.md  platforms-win32.md  system-info.md  text-tools.md  webhook-sender.md
docs/user-guide/: index.md  install.md  platform-support.md  quickstart.md
src/pymdm/: __init__.py  command_runner.py  dialog.py  logger.py  param_parser.py  system_info.py  text_tools.py  webhook_sender.py
src/pymdm/mdm/: __init__.py  _base.py  intune.py  jamf.py
tests/: conftest.py  test_command_runner.py  test_dialog.py  test_logger.py  test_mdm_base.py  test_mdm_intune.py  test_mdm_jamf.py  test_platforms_base.py  test_platforms_darwin.py  test_platforms_detection.py  test_platforms_linux.py  test_platforms_win32.py  test_system_info.py  test_text_tools.py  test_webhook_sender.py
