[project]
name = "pymdm"
dynamic = ["version"]
description = "Cross-platform utility package for MDM deployment scripts (Jamf Pro, Intune)."
readme = "README.md"
keywords = ["it", "mdm", "jamf", "intune", "endpoint", "deployment"]
authors = [{ name = "Andrew Lerman", email="info@liquidzoo.io" }]
requires-python = ">=3.12"

[project.optional-dependencies]
# For standard pip installs that need WebhookSender / HTTP support.
requests = [
    "requests>=2.32.5",
]
# Marker extra for users running under MacAdmins managed_python3
managed = []
docs = [
    "myst-parser",
    "sphinx>=7.3.7",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-iconify>=0.2.1",
    "shibuya>=2025.11.10",
]
dev = [
    "build",
    "pre-commit>=4.6.0",
    "pymdm[requests,docs]",
    "pytest>=8.2.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.5.1",
]

[build-system]
requires = [
  "setuptools >= 61",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pymdm*"]

[tool.setuptools.package-data]
pymdm = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "pymdm.__version__" }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "E101",
  "F401",
  "F403",
  "I001",
  "N801",
  "N802",
  "N806"
]
ignore = ["E722"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--durations=5",
    "--color=yes",
    "--cov=src",
    "--cov-report=html:coverage/htmlcov",
    "--cov-report=term-missing",
#    "--cov-fail-under=90",
]

[tool.coverage.run]
omit = ["tests/*"]
